[FIX] web: align progress bar to end of table cell
Steps to reproduce:
- intall Employee app
- install HR Gamification module (not an app)
- Go to Employees app
- Go to Configuration > Challenges > Challenges
- Create a new challenge with goals and participants
- Go to Configuration > Challenges > Goals History
- Open up a group
- The word "Completeness" and the progress bar is not aligned correctly, the bar is supposed to be directly underneath the label.

Investigation
- The styling of the progress bar inside table cells https://github.com/odoo/odoo/blob/1f12670a8061a4eb3fd57abca238d8daf7ef574d/addons/web/static/src/views/fields/progress_bar/progress_bar_field.scss#L27-L32 was missing to align the progress bar to the end of the containing flex box

opw-3599052

--- a/addons/web/static/src/views/fields/progress_bar/progress_bar_field.scss
+++ b/addons/web/static/src/views/fields/progress_bar/progress_bar_field.scss
@@ -28,7 +28,7 @@
     .o_progressbar {
         // Force progress bars to respect table's layout
         display: table-row;
-        justify-content: flex-end;
+        justify-content: end;
         .o_rtl & {
             justify-content: flex-start;
             text-align: right;
